fixed consistency issue such that older versions of an indexed dataframe would not see the updates performed on the newer versions